RESOLVED FIXED226518
Incorrect text selection when crossing flex item boundary
https://bugs.webkit.org/show_bug.cgi?id=226518
Summary Incorrect text selection when crossing flex item boundary
alan
Reported 2021-06-01 16:26:40 PDT
Attachments
Patch (7.07 KB, patch)
2021-06-01 17:05 PDT, alan
no flags
Patch (4.43 KB, patch)
2021-06-02 18:59 PDT, alan
no flags
Patch (8.74 KB, patch)
2021-06-03 09:47 PDT, alan
no flags
[fast-cq] Patch (9.76 KB, patch)
2021-06-03 10:50 PDT, alan
no flags
alan
Comment 1 2021-06-01 17:05:44 PDT
alan
Comment 2 2021-06-01 17:38:05 PDT
Will look into the EWS results whether they are actual failures.
Simon Fraser (smfr)
Comment 3 2021-06-01 20:40:47 PDT
Comment on attachment 430307 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=430307&action=review > Source/WebCore/rendering/RenderBlock.cpp:2260 > + if (is<RenderBlockFlow>(renderer)) > + logicalBottom += downcast<RenderBlockFlow>(renderer).lowestFloatLogicalBottom(); Since you will be blamed for this now, maybe look into the history of why it's this way, and add a FIXME if we think it's wrong. > Source/WebCore/rendering/RenderBlock.cpp:2264 > + if (pointInLogicalContents.y() > logicalBottomForCandidateBox || (!blocksAreFlipped && pointInLogicalContents.y() == logicalBottomForCandidateBox)) The `pointInLogicalContents.y() == logicalBottomForCandidateBox` test is very confusing here.
alan
Comment 4 2021-06-02 18:59:10 PDT
alan
Comment 5 2021-06-02 19:17:34 PDT
> View in context: > https://bugs.webkit.org/attachment.cgi?id=430307&action=review > > > Source/WebCore/rendering/RenderBlock.cpp:2260 > > + if (is<RenderBlockFlow>(renderer)) > > + logicalBottom += downcast<RenderBlockFlow>(renderer).lowestFloatLogicalBottom(); > > Since you will be blamed for this now, maybe look into the history of why > it's this way, and add a FIXME if we think it's wrong. > fixed in https://trac.webkit.org/changeset/278379/webkit
Simon Fraser (smfr)
Comment 6 2021-06-02 21:13:45 PDT
Comment on attachment 430433 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=430433&action=review > Source/WebCore/rendering/RenderBlock.cpp:2188 > + if (isTable() || isFlexibleBoxIncludingDeprecated() || isRenderGrid()) Should you add grid and deprecated flex box tests?
alan
Comment 7 2021-06-03 09:47:34 PDT
alan
Comment 8 2021-06-03 10:50:48 PDT
Created attachment 430481 [details] [fast-cq] Patch
EWS
Comment 9 2021-06-03 10:53:23 PDT
Committed r278411 (238436@main): <https://commits.webkit.org/238436@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430481 [details].
Radar WebKit Bug Importer
Comment 10 2021-06-03 10:54:16 PDT
Note You need to log in before you can comment on or make changes to this bug.